Fix on LineChart not working on Firefox

--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -38,7 +38,7 @@
         --footer-hover: #FFB800;
         --table-header: #333138;
         --table-row: #222222;
-        --table-row-odd: #333333;
+        --table-row-odd: #2b2b2b;
         --table-row-hover: #444444;
     }
     
